# BuildingThermalPanorama

./: .gitignore  README.md  cli.py  cli_click.py  cli_fire.py  config.yaml  cx_setup.py  environment.yml  gui.py  pano_cli.py  pylintrc  pyproject.toml
docs/: cli.html  cx_setup.html  docs.html  gui.html  index.html  utils.html
docs/distortion/: index.html  perspective.html  projection.html  radial.html  rectification.html
docs/flir/: extract.html  index.html
docs/interface/: cli.html  cmap.html  config.html  controller.html  gui.html  index.html  pano.html  pano_files.html  pano_project.html  plot_controller.html  tree.html
docs/ivimages/: index.html  ivimages.html
docs/misc/: camera_calibration.html  cmap.html  cx_setup.html  docs.html  exif.html  image_enhance.html  imageio.html  index.html  tools.html  via.html
docs/registration/: index.html
docs/segmentation/: deeplab.html  index.html
docs/stitch/: index.html  preprocess.html  stitcher.html
pano/: __init__.py  cx_setup.py  docs.py  gui.py  utils.py
pano/distortion/: __init__.py  perspective.py  projection.py  radial.py  rectification.py
pano/flir/: __init__.py  _flir_image_extractor.py  extract.py  extractor.py
pano/interface/: __init__.py  analysis.py  cli.py  cmap.py  config.py  controller.py  gui.py  gui_egs.py  init.py  pano.py  pano_files.py  pano_project.py  plot_controller.py  tree.py
pano/misc/: __init__.py  anomaly.py  camera_calibration.py  cmap.py  cx_setup.py  cx_setup_egs.py  docs.py  edgelet.py  exif.py  image_enhance.py  imageio.py  sp.py  subprocess.py  tools.py  via.py
pano/registration/: __init__.py
pano/segmentation/: deeplab.py  onnx.py  tf.py
pano/stitch/: __init__.py  preprocess.py  stitcher.py
qt/: QtQuickCtrlsEGS.conf  QtQuickCtrlsPano.conf  qtquickcontrols2.conf
qt/qml/: EGS.qml  OutputPanel.qml  Panorama.qml  PanoramaPanel.qml  ProjectPanel.qml  RegistrationPanel.qml  SegmentationPanel.qml  main.qml
resource/: Report.html  config.yaml  iron_colormap_rgb.txt  qtquickcontrols2.conf
script/: blending_example.py  canny.py  dataset_info.py  floor_detection_example.py  gradient_descent.py  histogram.py  hough.py  plot.py  projection.py  pyproject.py  register_joint_histogram.py  register_log.py  register_metrics_by_translation.py  register_mutual_information.py  register_optimize.py  register_prep.py  stitch_images_included.py  stitch_success.py
src/: config.yaml  docs.py  utils.py
tests/: context.py  test_distortion.py  test_flir.py  test_imageio.py  test_stitcher.py  test_tools.py
(+156 files in other folders)
